--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -29,6 +29,8 @@
 @using BibliotecaUteco.Client.Requests.Authors.Queries
 @using BibliotecaUteco.Client.Components.Authors.Forms
 
+@using BibliotecaUteco.Client.Components.Books.Views
+
 @using BibliotecaUteco.Client.Requests.Authors.Actions
 @using Microsoft.AspNetCore.Authorization
 @using BibliotecaUteco.Client.Responses
