--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BookCard.razor
@@ -4,7 +4,7 @@
     <LumexCard Class="w-full aspect-[2/3] group hover:scale-105 transition-all cursor-pointer group">
        <AuthorizeView>
            <Authorized>
-                 <LumexDropdown ShowArrow="true"  >
+                <LumexDropdown ShowArrow="true"  >
                 <LumexDropdownTrigger>
                     <LumexButton Size="Size.Small" IconOnly="true" Radius="Radius.Full" Class="absolute right-[10px] top-[10px] bg-green-700/50 backdrop-blur-xl invisible group-hover:visible text-white !p-1">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="!size-[16px] lucide lucide-ellipsis-icon lucide-ellipsis"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
@@ -33,7 +33,7 @@
                     <LumexDropdownItem Id="Divider2" Disabled="true">
                         <SidebarSectionDivider Name="Zona de peligro"/>
                     </LumexDropdownItem>
-                    <LumexDropdownItem Id="EliminarLibro" Color="@ThemeColor.Danger" Class="text-danger">
+                    <LumexDropdownItem OnClick="SetDeleteBookConfirmationModal" Disabled="_deletingBook" Id="EliminarLibro" Color="@ThemeColor.Danger" Class="text-danger">
                         <StartContent>
                             <Trash2Icon Size="18" class="shrink-0"/>
                         </StartContent>
@@ -103,18 +103,71 @@
     </LumexCard>
 </Animate>
 
+@if(ShowDeleteBookConfirmationDialog)
+{
+    <div @onclick="SetDeleteBookConfirmationModal" class="absolute inset-0 w-full h-full z-[9999999] bg-white/60 flex justify-center items-center">
+        <div class="p-4 border-neutral-200 border flex w-[300px] flex-col gap-3 bg-white items-center rounded-lg">
+            <label class="text-md font-semibold text-center">Desea eliminar el libro @Book.Name?</label>
+            <p class="text-[13px] font-normal">Una vez eliminado el libro no se podrá deshacer. No se puede eliminar un libro que tiene un prestamo pendiente.</p>
+            <div class="w-full flex items-center justify-between gap-2">
+                <LumexButton @onclick="SetDeleteBookConfirmationModal">Cancelar</LumexButton>
+                <LumexButton  Disabled="@_deletingBook" Color="ThemeColor.Danger" Onclick="FetchDeleteBookAsync">
+                    @if(_deletingBook)
+                    {
+                        <LumexSpinner Size="Size.Small"/>
+                    }
+                    else
+                    {
+                        @("Si, eliminar libro")
+                    } 
+                </LumexButton>
+
+            </div>
+        </div>
+    </div>
+}
+
+
 
 @code{
 
  
 
-   
+    //flags
+
+    public bool ShowDeleteBookConfirmationDialog {get; set;} = false;
+    public bool _deletingBook {get; set;} = false;
     [Parameter] public BookResponse Book {get; set;} = new();
 
     [Parameter] public bool HideShowDetails {get; set;}
     
     [Parameter] public int Index {get; set;} = 1;
 
+    [Parameter] public EventCallback OnBookDeleted {get; set;}
+
+
+    public async Task FetchDeleteBookAsync()
+    {
+        if(Book.Id <= 0) return;
+
+        _deletingBook = true;
+        StateHasChanged();
+        var result = await BooksApiServices.DeleteBookAsync(new(){BookId = Book.Id});
+
+        if(result.IsSuccessful())
+        {
+            Toast.Show("Libro eliminado exitosamente.");
+            await OnBookDeleted.InvokeAsync();
+        }
+        _deletingBook = false;
+        StateHasChanged();
+    }
+
+    public void SetDeleteBookConfirmationModal()
+    {
+        if(_deletingBook) return;
+        ShowDeleteBookConfirmationDialog = !ShowDeleteBookConfirmationDialog;
+    }
     public void SetBookToUpdate()
     {
         RightBarContext.SetBookToUpdate(Book);
