--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -562,6 +562,9 @@
   .z-\[999999\] {
     z-index: 999999;
   }
+  .z-\[9999999\] {
+    z-index: 9999999;
+  }
   .-m-2 {
     margin: calc(var(--spacing) * -2);
   }
@@ -1726,6 +1729,12 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .bg-white\/60 {
+    background-color: color-mix(in srgb, #fff 60%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 60%, transparent);
+    }
   }
   .bg-gradient-to-b {
     --tw-gradient-position: to bottom in oklab;
